src/objects/Document_Master__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>acfActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfDescription__c</fullName>
        <description>Click Loans</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acf_Source__c</fullName>
        <description>Click Loans</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Jumio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>clickDocument_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Income - Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income - PAYG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan / Debt Conduct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Click Loans Document Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>clickDocument_Type__c</columns>
        <columns>acfActive__c</columns>
        <columns>acfDescription__c</columns>
        <columns>acf_Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Document_name_rule_for_hardcoded_names</fullName>
        <active>false</active>
        <description>This rule used to make bank statements and identity verification document names as read only.</description>
        <errorConditionFormula>If(AND(ISCHANGED(Name),OR((PRIORVALUE(Name) = &apos;Bank Stmt&apos;),(PRIORVALUE(Name) = &apos;Identity Verification&apos;))),true,false)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You don&apos;t have access to edit this field.</errorMessage>
    </validationRules>
</CustomObject>